syntax = "proto3";

package kyve.stakers.v1beta1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/KYVENetwork/chain/x/stakers/types";

// Msg defines the Msg service.
service Msg {
  // CreateStaker ...
  rpc CreateStaker(MsgCreateStaker) returns (MsgCreateStakerResponse);
  // UpdateMetadata ...
  rpc UpdateMetadata(MsgUpdateMetadata) returns (MsgUpdateMetadataResponse);
  // UpdateCommission ...
  rpc UpdateCommission(MsgUpdateCommission) returns (MsgUpdateCommissionResponse);
  // JoinPool ...
  rpc JoinPool(MsgJoinPool) returns (MsgJoinPoolResponse);
  // LeavePool ...
  rpc LeavePool(MsgLeavePool) returns (MsgLeavePoolResponse);

  // UpdateParams defines a governance operation for updating the x/stakers module
  // parameters. The authority is hard-coded to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

// MsgCreateStaker defines a SDK message for creating a staker.
message MsgCreateStaker {
  // creator is the address of the staker.
  string creator = 1 [(gogoproto.jsontag) = "creator"];
  // amount is the initial self-stake of the staker.
  uint64 amount = 2 [(gogoproto.jsontag) = "amount"];
  // commission is the percentage that is deducted from rewards before
  // distributing the staker's delegators.
  string commission = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

// MsgStakePoolResponse defines the Msg/StakePool response type.
message MsgCreateStakerResponse {}

// MsgUpdateMetadata defines a SDK message for claiming the uploader role.
message MsgUpdateMetadata {
  // creator ...
  string creator = 1 [(gogoproto.jsontag) = "creator"];
  // moniker ...
  string moniker = 2 [(gogoproto.jsontag) = "moniker"];
  // website ...
  string website = 3 [(gogoproto.jsontag) = "website"];
  // identity from keybase.io
  string identity = 4 [(gogoproto.jsontag) = "identity"];
  // security_contact ...
  string security_contact = 5 [(gogoproto.jsontag) = "security_contact"];
  // details ...
  string details = 6 [(gogoproto.jsontag) = "details"];
}

// MsgUpdateMetadataResponse defines the Msg/MsgUpdateMetadata response type.
message MsgUpdateMetadataResponse {}

// MsgUpdateCommission ...
message MsgUpdateCommission {
  // creator ...
  string creator = 1 [(gogoproto.jsontag) = "creator"];
  // commission ...
  string commission = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

// MsgUpdateCommissionResponse ...
message MsgUpdateCommissionResponse {}

// MsgJoinPool ...
message MsgJoinPool {
  // creator ...
  string creator = 1 [(gogoproto.jsontag) = "creator"];
  // pool_id ...
  uint64 pool_id = 2 [(gogoproto.jsontag) = "pool_id"];
  // valaddress ...
  string valaddress = 3 [(gogoproto.jsontag) = "valaddress"];
  // amount ...
  uint64 amount = 4 [(gogoproto.jsontag) = "amount"];
}

// MsgJoinPoolResponse ...
message MsgJoinPoolResponse {}

// MsgLeavePool ...
message MsgLeavePool {
  // creator ...
  string creator = 1 [(gogoproto.jsontag) = "creator"];
  // pool_id ...
  uint64 pool_id = 2 [(gogoproto.jsontag) = "pool_id"];
}

// MsgReactivateStakerResponse ...
message MsgLeavePoolResponse {}

// MsgUpdateParams defines a SDK message for updating the module parameters.
message MsgUpdateParams {
  // authority is the address of the governance account.
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // payload defines the x/stakers parameters to update.
  string payload = 2;
}

// MsgUpdateParamsResponse defines the Msg/UpdateParams response type.
message MsgUpdateParamsResponse {}
